gave body scrollbar styles, including to always show y-axis scrollbar, which prevents the jumping from a scrollable to non-scrollable page which is jarring and gross

--- a/assets/styles/_layout-defaults.scss
+++ b/assets/styles/_layout-defaults.scss
@@ -24,6 +24,21 @@ body {
   background-color: $site-bg-color;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: 0.75rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $highlight-color;
+    outline: 2px solid $text-color;
+  }
 }
 
 hr {
